<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/imageview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagedescribe"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:scaleType="center"
        android:src="@drawable/canglaoshi" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/tv1size"
        android:layout_toRightOf="@id/imageview2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_lv211"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@color/tvcolor2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_lv212"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/tvcolor1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/tvcolor3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnmore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreinfo"
            android:focusable="false" />
    </LinearLayout>

</RelativeLayout>